amélioration du css / ansi les link en twig

--- a/templates/main/test.html.twig
+++ b/templates/main/test.html.twig
@@ -3,6 +3,9 @@
     {% block body %}
         <h2>On va faire plein de tests</h2>
 
+        <div>{{ mySeries.title }}</div>
+
+
         {# Commentaire #}
         {% set name="Guillaume" %}
         {# En twig lorsque l'on mets | on peut mettre des filtres comme dans php mais avec une sintaxe particuliètre #}
