--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,24 +6,39 @@
               content="width=device-width, user-scalable=yes, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% block title %}Series!{% endblock %}</title>
+
+        {# FONT de google #}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&display=swap" rel="stylesheet">
+
+        {# Feuille de style #}
         {# asset sous entend de base que le dossier que on chercher est dans public
         du coup pas besoin de le préciser#}
+        <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
         <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+
+        {# ICON #}
+        <link rel="icon" href="{{ asset('img/icon.png') }}">
 
     </head>
     <body>
-        <header>
-            <h1>Series !</h1>
-                {% include('inc/nav.html.twig') %}
-        </header>
-        <main>
-            {% block body %}
+        <div class="container">
+            <header>
 
-            {% endblock %}
-        </main>
-        <footer>
-            {% include('inc/nav.html.twig') %}
-            <div>&copy; {{ "now"|date("Y") }} Series !</div>
-        </footer>
+                <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo.svg')}}" alt="Series!"></a></h1>
+                    {% include('inc/nav.html.twig') %}
+            </header>
+            <main>
+                {% block body %}
+
+                {% endblock %}
+            </main>
+            <footer>
+                {% include('inc/nav.html.twig') %}
+                <div>&copy; {{ "now"|date("Y") }} Series !</div>
+
+            </footer>
+        </div>
     </body>
 </html>
