--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -5,6 +5,8 @@
         {# Le path est très bon. il faut juste mettre le nom de la route #}
         <li><a href="{{ path('main_home') }}" title="Home">Home</a></li>
         <li><a href="{{ path('main_test') }}" title="Test">Test</a></li>
+        <li><a href="{{ path('series_list') }}" title="All series">Series</a></li>
+        <li><a href="{{ path('series_create') }}" title="Create a new serie">Create</a></li>
     </ul>
 </nav>
 <hr>
