Création du formulaire

--- a/templates/serie/create.html.twig
+++ b/templates/serie/create.html.twig
@@ -3,7 +3,12 @@
 
 {% block body %}
     <div>
-        {# todo: afficher le formulaire de création #}
+        {{ form_start(serieForm) }}
+
+        {{ form_widget(serieForm) }}
+        <button>Create !</button>
+
+        {{ form_end(serieForm) }}
     </div>
 {% endblock %}
 
