--- a/templates/serie/details.html.twig
+++ b/templates/serie/details.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-tdo afficher le titre de la série | {{ parent() }}
+{{ serie.name }} | {{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <h2>todo: le titre de la série</h2>
-    <p>afficher toutes les infos de la série</p>
+    <h2>{{ serie.name }}</h2>
+    <div>{{ serie.overview }}</div>
+    <div>{{ serie.vote }}</div>
 {% endblock %}
 
