--- a/public/css/app.css
+++ b/public/css/app.css
@@ -47,3 +47,19 @@ nav ul {
 nav li {
     margin-right: 1rem;
 }
+.series-list {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+}
+label{
+    display: block;
+
+}
+input, textarea, select {
+    margin-bottom: 1rem;
+    box-sizing: border-box;
+    witdth: 150px;
+    max-width:50%;
+
+}
