Mise à jour Doctrine

--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -6,7 +6,8 @@
         <li><a href="{{ path('main_home') }}" title="Home">Home</a></li>
         <li><a href="{{ path('main_test') }}" title="Test">Test</a></li>
         <li><a href="{{ path('series_list') }}" title="All series">Series</a></li>
-        <li><a href="{{ path('series_create') }}" title="Create a new serie">Create</a></li>
+        <li><a href="{{ path('series_create') }}" title="Create a new serie">Create serie</a></li>
+        <li><a href="{{ path('season_create') }}" title="Create a new season">Create season</a></li>
     </ul>
 </nav>
 <hr>
