--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -5,7 +5,7 @@
         {% for serie in series %}
 
             <article>
-                <a href="{{ path('series_details', {'id': serie.id}) }}" title="View serie's details">
+                <a href="{{ path('series_details', {'id': serie.id}) }}" title="View serie's details | {{ serie.seasons|length }} seasons">
                     <img src="{{ asset('img/posters/series/'~serie.poster ) }}" alt="{{ serie.name }}">
                 </a>
             </article>
