--- a/public/css/app.css
+++ b/public/css/app.css
@@ -63,3 +63,15 @@ input, textarea, select {
     max-width:50%;
 
 }
+.flash {
+    padding: 20px;
+    font-weight: bold;
+    font-size: 1.8rem;
+    margin: 1rem 0;
+    border-radius: 5px;
+    text-align: center;
+    color: black;
+}
+.flash-success {
+    background-color: lawngreen;
+}
