--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,9 @@
 
         {# ICON #}
         <link rel="icon" href="{{ asset('img/icon.png') }}">
+        {% block extrastyles %}
 
+        {% endblock %}
     </head>
     <body>
         <div class="container">
@@ -29,6 +31,16 @@
                 <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo.svg')}}" alt="Series!"></a></h1>
                     {% include('inc/nav.html.twig') %}
             </header>
+
+            {# read and display all flash messages #}
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                <div class="flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+            {% endfor %}
+
             <main>
                 {% block body %}
 
