--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -6,8 +6,18 @@
         <li><a href="{{ path('main_home') }}" title="Home">Home</a></li>
         <li><a href="{{ path('main_test') }}" title="Test">Test</a></li>
         <li><a href="{{ path('series_list') }}" title="All series">Series</a></li>
-        <li><a href="{{ path('series_create') }}" title="Create a new serie">Create serie</a></li>
-        <li><a href="{{ path('season_create') }}" title="Create a new season">Create season</a></li>
+        {# app.user vérifie si quelqu'un est connecté #}
+        {% if app.user %}
+            <li><a href="{{ path('series_create') }}" title="Create a new serie">Create serie</a></li>
+            <li><a href="{{ path('season_create') }}" title="Create a new season">Create season</a></li>
+            <li><a href="{{ path('app_logout') }}" title="Logout">Logout ({{ app.user.firstname }})</a></li>
+            {% if is_granted("ROLE_ADMIN") %}
+                <li><a href="{{ path('admin_dashboard') }}" title="Admin dashboard">Admin dashboard</a></li>
+            {% endif %}
+        {% else %}
+            <li><a href="{{ path('app_login') }}" title="Login">Login</a></li>
+            <li><a href="{{ path('app_register') }}" title="Create account">Register</a></li>
+        {% endif %}
     </ul>
 </nav>
 <hr>
